// * Generaci칩n autom치tica con ts-proto y soporte NestJS
// * Ejecuta: 

//   --plugin=../../../node_modules/.bin/protoc-gen-ts_proto.cmd \
//   --ts_proto_out=../generated/__project_name_kebab__ \
//   --ts_proto_opt=nestJs=true \
//   __project_name_kebab__/__project_name_kebab__.proto


syntax = "proto3";

package __project_name_snake__;

//
// ================================
//   游닍 Servicio __project_name_pascal__Service
// ================================
//
// Contratos de comunicaci칩n entre el __project_name_pascal__ y el servidor
// para la gesti칩n de ejemplos en la aplicaci칩n.
//
service __project_name_pascal__Service {
  // * Crear un nuevo ejemplo
  rpc create__project_name_pascal__(Create__project_name_pascal__Dto) returns (__project_name_pascal__) {}

  // * Obtener todos los ejemplos (no paginado)
  rpc getAll__project_name_pascal__(__project_name_pascal__Empty) returns (__project_name_pascal__List) {}

  // * Obtener un ejemplo por ID
  rpc get__project_name_pascal__ById(Get__project_name_pascal__ByIdDto) returns (__project_name_pascal__) {}

  // * Actualizar un ejemplo existente
  rpc update__project_name_pascal__(Update__project_name_pascal__Dto) returns (__project_name_pascal__) {}

  // * Eliminar un ejemplo por ID
  rpc delete__project_name_pascal__(Get__project_name_pascal__ByIdDto) returns (__project_name_pascal__Empty) {}

  // * Obtener ejemplos paginados (cl치sico page + limit)
//   rpc getPaginated__project_name_pascal__(PaginationRequest) returns (Paginated__project_name_pascal__) {}

  // * Soporte para scroll infinito (cursor-based pagination)
  rpc get__project_name_pascal__ByCursor(CursorPaginationRequest) returns (CursorPaginated__project_name_pascal__) {}
}

//
// ================================
//   游닌 Mensajes de entrada
// ================================
//

// ! Mensaje vac칤o (com칰n en operaciones sin payload)
message __project_name_pascal__Empty {}

// * Crear nuevo ejemplo
message Create__project_name_pascal__Dto {
  string name = 1;
  optional string description = 2;
}

// * Actualizar un ejemplo
message Update__project_name_pascal__Dto {
  string id = 1;
  Update__project_name_pascal__Data __project_name_pascal__ = 2;
}

// * Obtener un ejemplo por su ID
message Get__project_name_pascal__ByIdDto {
  string id = 1;
}

// * Solicitud de paginaci칩n cl치sica
// message PaginationRequest {
//   int32 page = 1;  // P치gina actual (empieza en 1)
//   int32 limit = 2; // Elementos por p치gina
// }

// * Solicitud de paginaci칩n por cursor (scroll infinito)
message CursorPaginationRequest {
  string afterId = 1; // ID del 칰ltimo elemento visto
  int32 limit = 2;    // Elementos siguientes a devolver
}

//
// ================================
//   游닋 Mensajes de salida
// ================================
//

// * Lista de m칰ltiples ejemplos (no paginada)
message __project_name_pascal__List {
  repeated __project_name_camel__ __project_name_pascal__ = 1;
}

// * Lista de ejemplos paginada con `page`/`limit`
message Paginated__project_name_pascal__ {
  repeated __project_name_camel__ __project_name_pascal__ = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// * Lista de ejemplos paginada con `cursor`
message CursorPaginated__project_name_pascal__ {
  repeated __project_name_camel__ __project_name_pascal__= 1;
  string nextCursor = 2;
  bool hasMore = 3;
}

//
// ================================
//   游빔 Modelo base: __project_name_pascal__
// ================================
//

// * Representaci칩n base de un ejemplo
message __project_name_pascal__ {
  string id = 1;            // ! ID 칰nico del ejemplo
  string name = 2;
  optional string description = 3;
}

// * Datos anidados para actualizar un ejemplo
message Update__project_name_pascal__Data {
  string name = 1;
  optional string description = 2;
}

//
// ================================
//   游닊 Mensajes de eventos Kafka
// ================================
//

// * Evento: __project_name_pascal__ creado (Kafka)
message __project_name_pascal__CreatedEvent {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string createdAt = 4;
  string updatedAt = 5;
}
